..F....... [ZBXNEXT-583] added the maintenance filter to the trigger status page (Pavels)
A......... [ZBX-5351] implemented the "selectTimeperiods" parameter for the maintenance.get method (Pavels)
..F....... [ZBX-4972] added the ability to edit map links in the element mass update form (Pavels)

Bug fixes:
..F....... [ZBX-5437] fixed error when templated trigger description contain interface macro (Vedmak)
..F....... [ZBX-5411] fixed map element links sorting in element configuration form (Vedmak)
..F....... [ZBX-5465] fixed the "Filter by host group" select not being populated in the availability report page filter (Pavels)
..F....... [ZBX-5465] corrected the labels for the host group and host filter on the "by host" availability report page (Pavels)
..F....... [ZBX-5465] fixed wrong template being selected when returning to the "by template" availability report from a graph (Pavels)
.......PS. [ZBX-5485] fixed resolving of {HOST.NAME} macro on proxy in item keys (Sasha)
...GI..PS. [ZBX-5386] fixed ODBC items to become unsupported when NULL value returned (dimir)
....I..P.. [ZBX-5469] enabled possibility to use more than one application in proxy web monitoring for single host (dimir)
A.F....... [ZBX-5292] removed validation on empty macros value (Eduard)
..F....... [ZBX-5471] fixed error when copy trigger from host to linked template (Vedmak)
..F....... [ZBX-5460] fixed black links color, not visible in Dark Orange Theme bar text in Configuration -> Hosts -> host (Toms)
..F....... [ZBX-5317] fixed adding links for map elements (Vedmak)
A......... [ZBX-5440] added check for user group mass update function if no user group ids is provided (Toms)
A......... [ZBX-5440] fixed inability to remove last user and last permission from user group (Toms)
..F....... [ZBX-5353] improved login form layout when increasing text size in Firefox; thanks to Andrey Bondarenko (Pavels)