@@ -400,7 +400,7 @@ class CItem extends CItemGeneral {
 		// countOutput
 		if (!is_null($options['countOutput'])) {
 			$options['sortfield'] = '';
-			$sqlParts['select'] = array('COUNT(DISTINCT i.itemid) as rowscount');
+			$sqlParts['select'] = array('COUNT(DISTINCT i.itemid) AS rowscount');
 
 			// groupCount
 			if (!is_null($options['groupCount'])) {
@@ -652,13 +652,12 @@ class CItem extends CItemGeneral {
 
 		// adding applications
 		if (!is_null($options['selectApplications']) && str_in_array($options['selectApplications'], $subselectsAllowedOutputs)) {
-			$objParams = array(
+			$applications = API::Application()->get(array(
 				'nodeids' => $options['nodeids'],
 				'output' => $options['selectApplications'],
 				'itemids' => $itemids,
 				'preservekeys' => true
-			);
-			$applications = API::Application()->get($objParams);
+			));
 			foreach ($applications as $application) {
 				$aitems = $application['items'];
 				unset($application['items']);
@@ -726,6 +725,7 @@ class CItem extends CItemGeneral {
 		if (is_null($options['preservekeys'])) {
 			$result = zbx_cleanHashes($result);
 		}
+
 		return $result;
 	}
 
@@ -741,8 +741,8 @@ class CItem extends CItemGeneral {
 	public function getObjects($itemData) {
 		$options = array(
 			'filter' => $itemData,
-			'output'=>API_OUTPUT_EXTEND,
-			'webitems' => 1,
+			'output' => API_OUTPUT_EXTEND,
+			'webitems' => true
 		);
 
 		if (isset($itemData['node'])) {
@@ -767,7 +767,7 @@ class CItem extends CItemGeneral {
 	public function exists(array $object) {
 		$options = array(
 			'filter' => array('key_' => $object['key_']),
-			'webitems' => 1,
+			'webitems' => true,
 			'output' => API_OUTPUT_SHORTEN,
 			'nopermissions' => true,
 			'limit' => 1
@@ -829,7 +829,7 @@ class CItem extends CItemGeneral {
 	}
 
 	/**
-	 * Create item.
+	 * Create host item.
 	 *
 	 * @param array $items
 	 */
@@ -873,7 +873,7 @@ class CItem extends CItemGeneral {
 	}
 
 	/**
-	 * Update items.
+	 * Update host items.
 	 *
 	 * @param array $items
 	 *
@@ -924,9 +924,10 @@ class CItem extends CItemGeneral {
 	}
 
 	/**
-	 * Update item
+	 * Update item.
 	 *
 	 * @param array $items
+	 *
 	 * @return boolean
 	 */
 	public function update($items) {
@@ -942,7 +943,6 @@ class CItem extends CItemGeneral {
 	 * Delete items
 	 *
 	 * @param array $itemids
-	 * @return
 	 */
 	public function delete($itemids, $nopermissions = false) {
 		if (empty($itemids)) {
@@ -1140,9 +1140,12 @@ class CItem extends CItemGeneral {
 	 * Check, if items that are about to be inserted or updated violate the rule:
 	 * only one item can be linked to a inventory filed.
 	 * If everything is ok, function return true or throws Exception otherwise
+	 *
 	 * @static
+	 *
 	 * @param array $items
 	 * @param bool $update whether this is update operation
+	 *
 	 * @return bool
 	 */
 	public static function validateInventoryLinks(array $items, $update = false) {
@@ -1245,7 +1248,7 @@ class CItem extends CItemGeneral {
 			if (!isset($linksOnHostsFuture[$item['hostid']])) {
 				$linksOnHostsFuture[$item['hostid']] = array($item['key_'] => $item['inventory_link']);
 			}
-			else{
+			else {
 				$linksOnHostsFuture[$item['hostid']][$item['key_']] = $item['inventory_link'];
 			}
 		}
@@ -1306,6 +1309,7 @@ class CItem extends CItemGeneral {
 				);
 			}
 		}
+
 		return true;
 	}
 
@@ -1339,17 +1343,16 @@ class CItem extends CItemGeneral {
 
 	protected function applyQueryNodeOptions($tableName, $tableAlias, array $options, array $sqlParts) {
 		// only apply the node option if no specific ids are given
-		if ($options['groupids'] === null &&
-			$options['templateids'] === null &&
-			$options['hostids'] === null &&
-			$options['proxyids'] === null &&
-			$options['itemids'] === null &&
-			$options['interfaceids'] === null &&
-			$options['graphids'] === null &&
-			$options['triggerids'] === null &&
-			$options['applicationids'] === null &&
-			$options['discoveryids'] === null) {
-
+		if ($options['groupids'] === null
+				&& $options['templateids'] === null
+				&& $options['hostids'] === null
+				&& $options['proxyids'] === null
+				&& $options['itemids'] === null
+				&& $options['interfaceids'] === null
+				&& $options['graphids'] === null
+				&& $options['triggerids'] === null
+				&& $options['applicationids'] === null
+				&& $options['discoveryids'] === null) {
 			$sqlParts = parent::applyQueryNodeOptions($tableName, $tableAlias, $options, $sqlParts);
 		}
 
